# Piktogramme

./: README.md  config.yaml  create_makros.py  makros.md
.github/workflows/: github_workflows_update-makros.yml
img/Hoelzer/: readme.md
scripts/image_downloader/: README.MD  download_images.py  pyproject.toml
scripts/image_downloader/test/: test1.md
src/: Brandschutzzeichen.md  Gebotszeichen.md  Gefahrstoffzeichen.md  Piktogramme Leiternnutzung.md  Rettungszeichen.md  Verbotszeichen.md  Warnzeichen.md
